# VE475

./: .gitignore  CMakeLists.txt
challenges/c1/: c1.1.txt  combine.m  decrypt.m  main.m  read.m  simplify.m
challenges/c2/: plaintext
challenges/c2/cipher1/: CMakeLists.txt  Makefile  README.md  byte.h  ciphertext  main.cpp
challenges/c2/cipher2/: .gitignore  CMakeLists.txt  Makefile  README.md  byte.cpp  ciphertext  main.cpp  rc5.cpp  rc5.h
homework/homework1/: CMakeLists.txt  homework1.tar  homework1.tex
homework/homework1/ex1/: 1.tex  CMakeLists.txt  main.cpp
homework/homework1/ex3/: CMakeLists.txt  README.md  main.cpp
homework/homework10/: ex1.m  ex2.m  ex2.m~  homework10.tex  modinv.m
homework/homework2/: homework2.tex
homework/homework2/ex1/: p4.m  p4.tex
homework/homework3/: CMakeLists.txt  homework3.tex
homework/homework3/ex4/: 1  CMakeLists.txt  README.md  aes  aes.c  aes.h  main.c  sbox.c
homework/homework4/: CMakeLists.txt  homework4.tex
homework/homework4/ex3/: 4.tex  CMakeLists.txt  main.cpp
homework/homework4/ex5/: 2.tex  CMakeLists.txt  main.cpp
homework/homework4/mod_exp/: mod_exp.cpp  mod_exp.h
homework/homework5/: CMakeLists.txt  homework5.tex
homework/homework5/ex2/: 1.tex  2.tex  (+2 more)
homework/homework6/: CMakeLists.txt  homework6.tex
homework/homework7/: CMakeLists.txt  homework7.tex
homework/homework8/: homework8.tex
homework/homework9/: homework9.tex
project/: project1.tex
project/project2/: CMakeLists.txt  a.cpp  main.c  project2.tex  sha3.c  sha3.h  sha3.py  sha3_step_chi.h  split.py
slides/: .directory
(+48 files in other folders)
