cmake_minimum_required(VERSION 3.5)
project(VE475)

add_subdirectory(homework/homework1)
add_subdirectory(homework/homework3)
add_subdirectory(homework/homework4)
add_subdirectory(homework/homework5)
add_subdirectory(homework/homework6)

add_subdirectory(challenges/c2/cipher1)
add_subdirectory(challenges/c2/cipher2)
